# qrcode-reader

./: pyproject.toml  qrcode_reader.desktop  requirements.txt  setup.py
qrcode_reader/: QRCodeManager.py  __main__.py  qrcode_manager.py  qrcode_reader.py
qrcode_reader/plugins/: QRCode.py  QRCodeMail.py  QRCodeSMS.py  QRCodeTel.py  QRCodeUrl.py  QRCodeWifi.py  __init__.py  qrcode_contact.py  qrcode_ean.py  qrcode_mail.py  qrcode_sms.py  qrcode_tel.py  qrcode_url.py  qrcode_wifi.py
